--- a/LeShop/templates/base.html.twig
+++ b/LeShop/templates/base.html.twig
@@ -31,9 +31,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('userSignUp') }}">SignUp</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('userLogin') }}">Login</a>
-                    </li>
+                    {% if not app.user %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('userLogin') }}">Login</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('userLogout') }}">Logout</a>
+                        </li>
+                    {% endif %}
                     {# <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Dropdown
